Fix various spacing issues in gallery and about us

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -256,7 +256,7 @@ section {
 
 #about-us {
   width: 100%;
-  min-height: 100vh;
+  /* min-height: 100vh; */
 }
 
 
@@ -267,12 +267,8 @@ section {
   font-size: 1.1em;
 }
 
-@media only screen and (min-width: 768px) {
-  #about-us p {
-    font-size: 1.3em;
-    line-height: 1.3em;
+@media only screen and (min-width: 1000px) {
 
-  }
 }
 
 /* photo styling */
@@ -285,25 +281,36 @@ section {
 
 .photo-container img {
   width: 100%;
-  padding: 5px;
+  /* padding: 5px; */
 }
 
 
 
-@media (min-width: 768px) {
+@media (min-width: 1000px) {
   #about-us-content {
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 25px;
   }
 
   #about-us-text {
-    max-width: 55vw;
+    max-width: 60vw;
   }
+
+
+#about-us p {
+  font-size: 1.75vw;
+  /* line-height: 1.3em; */
+  }
+
+  .photo-container img {
+  }
+
 }
 
 
-@media (max-width: 768px) {
+@media (max-width: 1000px) {
 
   .about-us-content {
     display: flex;
@@ -343,13 +350,14 @@ hr.gradient {
 
 #schedule-and-prices {
   width: 100%;
-  height: 100vh;
+  min-height: 50vh;
 }
 
 #schedule-container {
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 30px 0 50px 0;
 }
 
 
@@ -390,7 +398,6 @@ hr.gradient {
 
 #latest-news {
   width: 100%;
-  height: 90vh;
 }
 
 #latest-news p {
@@ -411,6 +418,7 @@ hr.gradient {
   background-position: left, center;
   background-position: 0% 36%;
   background-size: 10px;
+ 
 }
 
 
@@ -421,7 +429,7 @@ footer {
   height: 15vh;
   background-color: #45677b;
   display: flex;
-  margin-top: 50px;
+  margin-top: 0px;
 }
 
 footer ul {
@@ -589,17 +597,17 @@ footer ul i:hover {
 
 /* styling for gallery */
 
-.row {
+#image-row {
   display: flex;
   flex-wrap: wrap;
-  padding: 0 4px;
+  /* padding: 0px 4px; */
 }
 
 /* Create four equal columns that sits next to each other */
 .column {
   flex: 25%;
   max-width: 25%;
-  padding: 0 4px;
+  /* padding: 0 4px; */
 }
 
 .column img {
@@ -609,7 +617,7 @@ footer ul i:hover {
 }
 
 /* Responsive layout - makes a two column-layout instead of four columns */
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1250px) {
   .column {
     flex: 50%;
     max-width: 50%;
@@ -625,8 +633,6 @@ footer ul i:hover {
 }
 
 /* styling for image hover effect */
-
-
 .hovereffect {
   width: 100%;
   height: 100%;
@@ -697,7 +703,7 @@ footer ul i:hover {
 }
 
 .hovereffect:hover img {
-  opacity: 0.6;
+  opacity: 0.45;
   filter: alpha(opacity=60);
   -webkit-transform: translate3d(0,0,0);
   transform: translate3d(0,0,0);
@@ -710,3 +716,16 @@ footer ul i:hover {
   -webkit-transform: translate3d(0,0,0);
   transform: translate3d(0,0,0);
 }
+
+#image-row p {
+  color: white;
+  font-size: 1rem;
+  text-align: left;
+  margin: 0;
+  margin-top: 20%;
+}
+
+#image-row p a {
+  font-size: 1.1rem;
+}
+
